# Edu_Coursework

./: Untitled.ipynb  brand_new_file.txt  bunch_file.txt  file_three.txt
100days_python_minis/100d31/: main.py
BPMN_flowchart/: Laundry.excalidraw  Shoestore 1.bpmn  bpmn quiz 2.bpmn
DS_Math_Notes/: Correlation.txt  Distributions.txt  Probability.txt
Fluent_Python/: Untitled.ipynb
OOP Refresher/: Mini+Project+-+Vending+Machines.py  OOP_Tic_Tac_Toe.ipynb  S12_OOP_Tic_Tac_Toe.ipynb  coursework_using_jupyter.ipynb  coursework_using_jupyter_2o2.ipynb  main.py  scratchpad.ipynb  war.py
Probability Calculator/: Untitled.ipynb  joint_distributions  sample_properties.py
Project_DUDL/: Torch_tools.py  main.py
Python_BC_60_day/: main.py
py4DSnMLcamp/: S8Pandas.ipynb  Untitled.ipynb
uvtest/: 107_MNIST_Start.py  96_More_practice_w_multioutput.py  AirQualityUCI.parquet  AltMoScratch.py  DUDL_conv_tranfs.py  Notebook.py  Section_12_Data.py  Section_14_ml_stn_2.py  Section_14_proj_3.py  UCIapiTest.py  Weight_Init_Challenge.py  altscratch.py  from_scratch_autoencoder.py  gaussian_blurs.py  heart_disease  lossfun.py  main.py  manual_convolv.py  metaprep.py  milestone_simple_addition_2_nums.py  my_first_cnn.py  np_scratch.py  preprocessing copy 2.py  preprocessing.py  pyproject.toml  winequality-red.parquet
uvtest/data/mnist_train_small/test_set/: testing_set_01.parquet
uvtest/data/mnist_train_small/training_set/: training_set_01.parquet
uvtest/data/winequality-red/test_set/: testing_set_01.parquet
uvtest/data/winequality-red/training_set/: training_set_01.parquet
(+245 files in other folders)
