[project]
name = "dudl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.0",
    "marimo[recommended]>=0.16.0",
    "numpy>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "ucimlrepo>=0.0.7",
    "vega-datasets>=0.9.0",
]
